test/samples/linear/valid/assign-consume-simul.crust
// show that you can assign and consume in the same expr
struct lin_point {
    int x;
    int y;
};

int main() {
    struct lin_point new;
    int x; 
    int y;

    new = {struct lin_point -> 1,2 };

    new = new;

    :{x, y} = new;


    return x + y;
} 
