test/samples/linear/invalid/assign-consume-simul.crust
// show that you can assign and consume in the same expr? should be valid